--- a/curriculum-back/package.json
+++ b/curriculum-back/package.json
@@ -10,6 +10,7 @@
   "author": "nobody",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "module-alias": "^2.2.2",
